[feature/header] sort selectors

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -33,6 +33,10 @@ body {
 
 .header {
   display: block;
+  padding: 15px;
+  position: relative;
+  width: 100%;
+  z-index: 99;
 }
 .header .site-header-wrapper {
   background-color: #424551;
@@ -47,8 +51,8 @@ body {
   }
 }
 .header .site-header-main .header__icon--menu {
-  position: initial;
   color: #fff;
+  position: initial;
 }
 .header .site-header-main .site-header-main-wrapper {
   align-items: center;
@@ -96,9 +100,9 @@ body {
   min-height: 84px;
 }
 .header .site-navigation-wrapper .header__icons {
+  align-items: center;
   justify-self: end;
   margin-right: 100px;
-  align-items: center;
 }
 .header .site-navigation-wrapper .site-header-navigation-wrapper {
   align-content: center;
@@ -108,8 +112,8 @@ body {
 }
 .header .site-navigation-wrapper .header__heading,
 .header .site-navigation-wrapper .header__heading-link {
-  grid-area: unset;
   align-self: center;
+  grid-area: unset;
 }
 .header .site-navigation-wrapper .list-menu--inline {
   align-items: center;
@@ -148,22 +152,13 @@ body {
 }
 
 .header__menu-item {
-  border-bottom: none;
-  color: #282c3f;
+  border-bottom: 0;
+  color: #424551;
   font-size: 14px;
   text-transform: capitalize;
   transition: -webkit-text-decoration var(--duration-short) ease;
   transition: text-decoration var(--duration-short) ease;
   transition: text-decoration var(--duration-short) ease, -webkit-text-decoration var(--duration-short) ease;
-}
-
-.row {
-  display: flex;
-  flex-wrap: wrap;
-}
-
-.v-center {
-  align-items: center;
 }
 
 ul {
@@ -176,22 +171,13 @@ a {
   text-decoration: none;
 }
 
-/* header */
-.header {
-  display: block;
-  width: 100%;
-  position: relative;
-  z-index: 99;
-  padding: 15px;
-}
-
 .header .item-left {
   flex: 0 0 17%;
 }
 
 .header .logo a {
+  color: #424551;
   font-size: 30px;
-  color: #000000;
   font-weight: 700;
   text-decoration: none;
 }
@@ -201,17 +187,17 @@ a {
 }
 
 .header .item-right {
-  flex: 0 0 17%;
   display: flex;
+  flex: 0 0 17%;
   justify-content: flex-end;
 }
 
 .header .item-right a {
-  text-decoration: none;
-  font-size: 16px;
   color: #424551;
   display: inline-block;
+  font-size: 16px;
   margin-left: 10px;
+  text-decoration: none;
   transition: color 0.3s ease;
 }
 
@@ -222,24 +208,24 @@ a {
 }
 
 .header .menu > ul > li > a {
+  color: #424551;
   font-size: 16px;
   font-weight: 700;
-  color: #424551;
   position: relative;
   text-transform: capitalize;
   transition: color 0.3s ease;
 }
 
 .header .menu > ul > li .sub-menu {
-  position: absolute;
-  z-index: 500;
-  background-color: #ffffff;
+  background-color: #fff;
   box-shadow: -2px 8px 70px -25px rgba(0, 0, 0, 0.3);
-  padding: 20px 30px;
-  transition: all 0.5s ease;
   margin-top: 25px;
   opacity: 0;
+  padding: 20px 30px;
+  position: absolute;
+  transition: all 0.5s ease;
   visibility: hidden;
+  z-index: 500;
 }
 
 @media (min-width: 992px) {
@@ -254,30 +240,30 @@ a {
 }
 
 .header .menu > ul > li .sub-menu > ul > li > a {
+  color: #424551;
   display: inline-block;
-  padding: 10px 0;
   font-size: 16px;
-  color: #555555;
-  transition: color 0.3s ease;
+  padding: 10px 0;
   text-decoration: none;
   text-transform: capitalize;
+  transition: color 0.3s ease;
 }
 
 .header .menu > ul > li .single-column-menu {
-  min-width: 280px;
   max-width: 350px;
+  min-width: 280px;
 }
 
 .header .menu > ul > li .sub-menu.mega-menu > .list-item > ul > li {
-  line-height: 1;
   display: block;
+  line-height: 1;
 }
 
 .header .menu > ul > li .sub-menu.mega-menu > .list-item > ul > li > a {
-  padding: 10px 0;
+  color: #424551;
   display: inline-block;
   font-size: 15px;
-  color: #555555;
+  padding: 10px 0;
   transition: color 0.3s ease;
 }
 
@@ -287,11 +273,11 @@ a {
 }
 
 .header .menu > ul > li .sub-menu.mega-menu-column-4 {
-  max-width: 1380px;
-  width: 100%;
   display: flex;
   flex-wrap: wrap;
-  padding: 8px 0px;
+  max-width: 1380px;
+  padding: 8px 0;
+  width: 100%;
 }
 
 .header .menu > ul > li .sub-menu.mega-menu-column-4 > .list-item {
@@ -300,8 +286,8 @@ a {
 }
 
 .header .menu > ul > li .sub-menu.mega-menu-column-4 > .list-item .title {
+  color: #ff4242;
   font-size: 16px;
-  color: #ea4636;
   font-weight: 500;
   line-height: 1;
   padding: 10px 0;
@@ -312,10 +298,10 @@ a {
 }
 
 .header .menu > ul > li .sub-menu.mega-menu-column-4 > .list-item img {
-  max-width: 100%;
-  width: 100%;
-  vertical-align: middle;
   margin-top: 10px;
+  max-width: 100%;
+  vertical-align: middle;
+  width: 100%;
 }
 
 .header .menu > ul > li .sub-menu.mega-menu > .list-item > ul > li > a:hover,
@@ -334,281 +320,21 @@ a {
   display: none;
 }
 
-/*responsive*/
-@media (max-width: 991px) {
-  .header .item-center {
-    order: 3;
-    flex: 0 0 100%;
-  }
-
-  .header .item-left,
-.header .item-right {
-    flex: 0 0 auto;
-  }
-
-  .v-center {
-    justify-content: space-between;
-  }
-
-  .header .mobile-menu-trigger {
-    display: flex;
-    height: 30px;
-    width: 30px;
-    margin-left: 15px;
-    cursor: pointer;
-    align-items: center;
-    justify-content: center;
-  }
-
-  .header .mobile-menu-trigger span {
-    display: block;
-    height: 2px;
-    background-color: #333333;
-    width: 24px;
-    position: relative;
-  }
-
-  .header .mobile-menu-trigger span:before,
-.header .mobile-menu-trigger span:after {
-    content: "";
-    position: absolute;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: #333333;
-  }
-
-  .header .mobile-menu-trigger span:before {
-    top: -6px;
-  }
-
-  .header .mobile-menu-trigger span:after {
-    top: 6px;
-  }
-
-  .header .item-right {
-    align-items: center;
-  }
-
-  .header .menu {
-    position: fixed;
-    width: 320px;
-    background-color: #ffffff;
-    left: 0;
-    top: 0;
-    height: 100%;
-    overflow: hidden;
-    transform: translate(-100%);
-    transition: all 0.5s ease;
-    z-index: 1099;
-  }
-
-  .header .menu.active {
-    transform: translate(0%);
-  }
-
-  .header .menu > ul > li {
-    line-height: 1;
-    margin: 0;
-    display: block;
-  }
-
-  .header .menu > ul > li > a {
-    line-height: 50px;
-    height: 50px;
-    padding: 0 50px 0 15px;
-    display: block;
-    border-bottom: 1px solid rgba(0, 0, 0, 0.1);
-  }
-
-  .header .menu > ul > li > a i {
-    position: absolute;
-    height: 50px;
-    width: 50px;
-    top: 0;
-    right: 0;
-    text-align: center;
-    line-height: 50px;
-    transform: rotate(-90deg);
-  }
-
-  .header .menu .mobile-menu-head {
-    display: flex;
-    height: 50px;
-    border-bottom: 1px solid rgba(0, 0, 0, 0.1);
-    justify-content: space-between;
-    align-items: center;
-    position: relative;
-    z-index: 501;
-    position: -webkit-sticky;
-    position: sticky;
-    background-color: #ffffff;
-    top: 0;
-  }
-
-  .header .menu .mobile-menu-head .go-back {
-    height: 50px;
-    width: 50px;
-    border-right: 1px solid rgba(0, 0, 0, 0.1);
-    cursor: pointer;
-    line-height: 50px;
-    text-align: center;
-    color: #000000;
-    font-size: 16px;
-    display: none;
-  }
-
-  .header .menu .mobile-menu-head.active .go-back {
-    display: block;
-  }
-
-  .header .menu .mobile-menu-head .current-menu-title {
-    font-size: 15px;
-    font-weight: 500;
-    color: #000000;
-  }
-
-  .header .menu .mobile-menu-head .mobile-menu-close {
-    height: 50px;
-    width: 50px;
-    border-left: 1px solid rgba(0, 0, 0, 0.1);
-    cursor: pointer;
-    line-height: 50px;
-    text-align: center;
-    color: #000000;
-    font-size: 25px;
-  }
-
-  .header .menu .menu-main {
-    height: 100%;
-    overflow-x: hidden;
-    overflow-y: auto;
-  }
-
-  .header .menu > ul > li .sub-menu.mega-menu,
-.header .menu > ul > li .sub-menu {
-    visibility: visible;
-    opacity: 1;
-    position: absolute;
-    box-shadow: none;
-    margin: 0;
-    padding: 15px;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    padding-top: 65px;
-    max-width: none;
-    min-width: auto;
-    display: none;
-    transform: translateX(0%);
-    overflow-y: auto;
-  }
-
-  .header .menu > ul > li .sub-menu.active {
-    display: block;
-  }
-
-  @-webkit-keyframes slideLeft {
-    0% {
-      opacity: 0;
-      transform: translateX(100%);
-    }
-    100% {
-      opacity: 1;
-      transform: translateX(0%);
-    }
-  }
-
-  @keyframes slideLeft {
-    0% {
-      opacity: 0;
-      transform: translateX(100%);
-    }
-    100% {
-      opacity: 1;
-      transform: translateX(0%);
-    }
-  }
-  @-webkit-keyframes slideRight {
-    0% {
-      opacity: 1;
-      transform: translateX(0%);
-    }
-    100% {
-      opacity: 0;
-      transform: translateX(100%);
-    }
-  }
-  @keyframes slideRight {
-    0% {
-      opacity: 1;
-      transform: translateX(0%);
-    }
-    100% {
-      opacity: 0;
-      transform: translateX(100%);
-    }
-  }
-  .header .menu > ul > li .sub-menu.mega-menu-column-4 > .list-item img {
-    margin-top: 0;
-  }
-
-  .header .menu > ul > li .sub-menu.mega-menu-column-4 > .list-item.text-center .title {
-    margin-bottom: 20px;
-  }
-
-  .header .menu > ul > li .sub-menu.mega-menu-column-4 > .list-item.text-center:last-child .title {
-    margin-bottom: 0px;
-  }
-
-  .header .menu > ul > li .sub-menu.mega-menu-column-4 > .list-item {
-    flex: 0 0 100%;
-    padding: 0px;
-  }
-
-  .header .menu > ul > li .sub-menu > ul > li > a,
-.header .menu > ul > li .sub-menu.mega-menu > .list-item > ul > li > a {
-    display: block;
-  }
-
-  .header .menu > ul > li .sub-menu.mega-menu > .list-item > ul {
-    margin-bottom: 15px;
-  }
-
-  .menu-overlay {
-    position: fixed;
-    background-color: rgba(0, 0, 0, 0.5);
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    z-index: 1098;
-    visibility: hidden;
-    opacity: 0;
-    transition: all 0.5s ease;
-  }
-
-  .menu-overlay.active {
-    visibility: visible;
-    opacity: 1;
-  }
-}
 .desktop-oddColumnContent {
-  float: left;
   display: block;
-  position: relative;
+  float: left;
   height: 436px;
   padding-top: 4px;
+  position: relative;
 }
 
 .desktop-navBlock {
   display: block;
-  position: relative;
   float: left;
-  width: 216px;
   margin: 0;
   padding: 0;
+  position: relative;
+  width: 216px;
 }
 
 .desktop-navBlock > li {
@@ -622,15 +348,15 @@ a {
 }
 
 .desktop-categoryName {
-  text-transform: uppercase;
   color: #1e212c;
-  padding: 12px 0 2px;
-  white-space: nowrap;
-  text-overflow: ellipsis;
-  overflow: hidden;
-  font-weight: 700;
   font-size: 14px;
+  font-weight: 700;
   letter-spacing: 1px;
+  overflow: hidden;
+  padding: 12px 0 2px;
+  text-overflow: ellipsis;
+  text-transform: uppercase;
+  white-space: nowrap;
 }
 
 .desktop-categoryLink {
@@ -638,21 +364,18 @@ a {
   font-weight: 400;
 }
 
-.desktop-categoryLink, .desktop-categoryName {
+.desktop-categoryLink,
+.desktop-categoryName {
   display: block;
   font-size: 14px;
   text-decoration: none;
 }
 
-.desktop-evenColumnContent {
-  background-color: rgba(245, 245, 246, 0.4);
-}
-
 .desktop-hrLine {
-  width: 140px;
+  background-color: #fff;
   height: 1px;
   margin: 12px 0 0 25px;
-  background-color: #eaeaec;
+  width: 140px;
 }
 
 a.desktop-categoryLink:hover {
