--- a/dev/scss/sections/_header.scss
+++ b/dev/scss/sections/_header.scss
@@ -1,6 +1,10 @@
 // --- header--- //
 .header {
   display: block;
+  padding: 15px;
+  position: relative;
+  width: 100%;
+  z-index: 99;
 
   .site-header-wrapper {
     background-color: $gray-800;
@@ -16,8 +20,8 @@
     }
 
     .header__icon--menu {
-      position: initial;
       color: $white;
+      position: initial;
     }
 
     .site-header-main-wrapper {
@@ -75,9 +79,9 @@
     min-height: 84px;
 
     .header__icons {
+      align-items: center;
       justify-self: end;
       margin-right: 100px;
-      align-items: center;
     }
 
     .site-header-navigation-wrapper {
@@ -90,8 +94,8 @@
 
     .header__heading,
     .header__heading-link {
-      grid-area: unset;
       align-self: center;
+      grid-area: unset;
     }
 
     .list-menu--inline{
@@ -132,6 +136,7 @@
 
   .header__submenu {
     background-color: $white;
+
     .header__menu-item {
       padding-left: 2.4rem;
     }
@@ -139,157 +144,166 @@
 }
 
 .header__menu-item {
-  border-bottom: none;
-  color: #282c3f;
+  border-bottom: 0;
+  color: $gray-800;
   font-size: 14px;
   text-transform: capitalize;
   transition: text-decoration var(--duration-short) ease;
 }
-.row {
-  display: flex;
-  flex-wrap: wrap;
-}
-.v-center{
-  align-items: center;
-}
-ul{
+
+ul {
   list-style: none;
-  margin:0;
-  padding:0;
+  margin: 0;
+  padding: 0;
 }
-a{
+
+a {
   text-decoration: none;
 }
-/* header */
-.header{
-  display: block;
-  width: 100%;
-  position: relative;
-  z-index: 99;
-  padding:15px;
+
+.header .item-left {
+  flex: 0 0 17%;
 }
-.header .item-left{
-  flex:0 0 17%;
-}
-.header .logo a{
+
+.header .logo a {
+  color: $gray-800;
   font-size: 30px;
-  color:#000000;
   font-weight: 700;
   text-decoration: none;
 }
-.header .item-center{
-  flex:0 0 66%;
+
+.header .item-center {
+  flex: 0 0 66%;
 }
-.header .item-right{
-  flex:0 0 17%;
+
+.header .item-right {
   display: flex;
+  flex: 0 0 17%;
   justify-content: flex-end;
 }
-.header .item-right a{
-  text-decoration: none;
-  font-size: 16px;
+
+.header .item-right a {
   color: $gray-800;
   display: inline-block;
+  font-size: 16px;
   margin-left: 10px;
-  transition: color 0.3s ease;
+  text-decoration: none;
+  transition: color .3s ease;
 }
-.header .menu > ul > li{
+
+.header .menu > ul > li {
   display: inline-block;
   line-height: 50px;
   margin-left: 25px;
 }
-.header .menu > ul > li > a{
+
+.header .menu > ul > li > a {
+  color: $gray-800;
   font-size: 16px;
   font-weight: 700;
-  color: $gray-800;
   position: relative;
   text-transform: capitalize;
-  transition: color 0.3s ease;
+  transition: color .3s ease;
 }
-.header .menu > ul > li .sub-menu{
-  position: absolute;
-  z-index: 500;
-  background-color:#ffffff;
-  box-shadow: -2px 8px 70px -25px rgba(0,0,0,0.3);
+
+.header .menu > ul > li .sub-menu {
+  background-color: $white;
+  box-shadow: -2px 8px 70px -25px rgba(0, 0, 0, .3);
+  margin-top: 25px;
+  opacity: 0;
   padding: 20px 30px;
-  transition: all 0.5s ease;
-  margin-top:25px;
-  opacity:0;
+  position: absolute;
+  transition: all .5s ease;
   visibility: hidden;
+  z-index: 500;
 }
-@media(min-width: 992px){
-  .header .menu > ul > li.menu-item-has-children:hover .sub-menu{
+
+@media(min-width: 992px) {
+  .header .menu > ul > li.menu-item-has-children:hover .sub-menu {
     margin-top: 0;
     visibility: visible;
     opacity: 1;
   }
 }
-.header .menu > ul > li .sub-menu > ul > li{
+
+.header .menu > ul > li .sub-menu > ul > li {
   line-height: 1;
 }
-.header .menu > ul > li .sub-menu > ul > li > a{
+
+.header .menu > ul > li .sub-menu > ul > li > a {
+  color: $gray-800;
   display: inline-block;
-  padding: 10px 0;
   font-size: 16px;
-  color: #555555;
-  transition: color 0.3s ease;
+  padding: 10px 0;
   text-decoration: none;
   text-transform: capitalize;
+  transition: color .3s ease;
 }
-.header .menu > ul > li .single-column-menu{
-  min-width: 280px;
+
+.header .menu > ul > li .single-column-menu {
   max-width: 350px;
+  min-width: 280px;
 }
-.header .menu > ul > li .sub-menu.mega-menu > .list-item > ul > li{
-  line-height: 1;
+
+.header .menu > ul > li .sub-menu.mega-menu > .list-item > ul > li {
   display: block;
+  line-height: 1;
+
 }
+
 .header .menu > ul > li .sub-menu.mega-menu > .list-item > ul > li > a {
-  padding:10px 0;
+  color: $gray-800;
   display: inline-block;
   font-size: 15px;
-  color:#555555;
-  transition: color 0.3s ease;
+  padding: 10px 0;
+  transition: color .3s ease;
 }
-.header .menu > ul > li .sub-menu.mega-menu{
+
+.header .menu > ul > li .sub-menu.mega-menu {
   left: 50%;
   transform: translateX(-50%);
 }
 
-.header .menu > ul > li .sub-menu.mega-menu-column-4{
-  max-width: 1380px;
-  width: 100%;
+.header .menu > ul > li .sub-menu.mega-menu-column-4 {
   display: flex;
   flex-wrap: wrap;
-  padding:8px 0px;
+  max-width: 1380px;
+  padding: 8px 0;
+  width: 100%;
 }
-.header .menu > ul > li .sub-menu.mega-menu-column-4 > .list-item{
-  flex:0 0 25%;
-  padding:0 15px;
+
+.header .menu > ul > li .sub-menu.mega-menu-column-4 > .list-item {
+  flex: 0 0 25%;
+  padding: 0 15px;
 }
-.header .menu > ul > li .sub-menu.mega-menu-column-4 > .list-item .title{
+
+.header .menu > ul > li .sub-menu.mega-menu-column-4 > .list-item .title {
+  color: $danger;
   font-size: 16px;
-  color:#ea4636;
   font-weight: 500;
   line-height: 1;
   padding:10px 0;
 }
-.header .menu > ul > li .sub-menu.mega-menu-column-4 > .list-item.text-center .title{
+
+.header .menu > ul > li .sub-menu.mega-menu-column-4 > .list-item.text-center .title {
   text-align: center;
 }
-.header .menu > ul > li .sub-menu.mega-menu-column-4 > .list-item img{
-  max-width: 100%;
-  width: 100%;
-  vertical-align: middle;
+
+.header .menu > ul > li .sub-menu.mega-menu-column-4 > .list-item img {
   margin-top: 10px;
+  max-width: 100%;
+  vertical-align: middle;
+  width: 100%;
 }
+
 .header .menu > ul > li .sub-menu.mega-menu > .list-item > ul > li > a:hover,
 .header .menu > ul > li .sub-menu > ul > li > a:hover,
 .header .item-right a:hover,
-.header .menu > ul > li:hover > a{
+.header .menu > ul > li:hover > a {
   color: $primary;
 }
-.header .menu > ul > li:last-child > a{
+
+.header .menu > ul > li:last-child > a {
   color: $danger;
 }
 
@@ -298,276 +312,72 @@ a{
   display: none;
 }
 
-/*responsive*/
-@media(max-width: 991px){
-
-  .header .item-center{
-    order:3;
-    flex:0 0 100%;
-  }
-  .header .item-left,
-  .header .item-right{
-    flex:0 0 auto;
-  }
-  .v-center{
-    justify-content: space-between;
-  }
-  .header .mobile-menu-trigger{
-    display: flex;
-    height: 30px;
-    width: 30px;
-    margin-left: 15px;
-    cursor: pointer;
-    align-items: center;
-    justify-content: center;
-  }
-  .header .mobile-menu-trigger span{
-    display: block;
-    height: 2px;
-    background-color: #333333;
-    width: 24px;
-    position: relative;
-  }
-  .header .mobile-menu-trigger span:before,
-  .header .mobile-menu-trigger span:after{
-    content: '';
-    position: absolute;
-    left:0;
-    width: 100%;
-    height: 100%;
-    background-color: #333333;
-  }
-  .header .mobile-menu-trigger span:before{
-    top:-6px;
-  }
-  .header .mobile-menu-trigger span:after{
-    top:6px;
-  }
-  .header .item-right{
-    align-items: center;
-  }
-
-  .header .menu{
-    position: fixed;
-    width: 320px;
-    background-color:#ffffff;
-    left:0;
-    top:0;
-    height: 100%;
-    overflow: hidden;
-    transform: translate(-100%);
-    transition: all 0.5s ease;
-    z-index: 1099;
-  }
-  .header .menu.active{
-    transform: translate(0%);
-  }
-  .header .menu > ul > li{
-    line-height: 1;
-    margin:0;
-    display: block;
-  }
-  .header .menu > ul > li > a{
-    line-height: 50px;
-    height: 50px;
-    padding:0 50px 0 15px;
-    display: block;
-    border-bottom: 1px solid rgba(0,0,0,0.1);
-  }
-  .header .menu > ul > li > a i{
-    position: absolute;
-    height: 50px;
-    width: 50px;
-    top:0;
-    right: 0;
-    text-align: center;
-    line-height: 50px;
-    transform: rotate(-90deg);
-  }
-  .header .menu .mobile-menu-head{
-    display: flex;
-    height: 50px;
-    border-bottom: 1px solid rgba(0,0,0,0.1);
-    justify-content: space-between;
-    align-items: center;
-    position: relative;
-    z-index: 501;
-    position: sticky;
-    background-color: #ffffff;
-    top:0;
-  }
-  .header .menu .mobile-menu-head .go-back{
-    height: 50px;
-    width: 50px;
-    border-right: 1px solid rgba(0,0,0,0.1);
-    cursor: pointer;
-    line-height: 50px;
-    text-align: center;
-    color:#000000;
-    font-size: 16px;
-    display: none;
-  }
-  .header .menu .mobile-menu-head.active .go-back{
-    display: block;
-  }
-  .header .menu .mobile-menu-head .current-menu-title{
-    font-size: 15px;
-    font-weight: 500;
-    color:#000000;
-  }
-  .header .menu .mobile-menu-head .mobile-menu-close{
-    height: 50px;
-    width: 50px;
-    border-left: 1px solid rgba(0,0,0,0.1);
-    cursor: pointer;
-    line-height: 50px;
-    text-align: center;
-    color:#000000;
-    font-size: 25px;
-  }
-  .header .menu .menu-main{
-    height: 100%;
-    overflow-x: hidden;
-    overflow-y: auto;
-  }
-  .header .menu > ul > li .sub-menu.mega-menu,
-  .header .menu > ul > li .sub-menu{
-    visibility: visible;
-    opacity: 1;
-    position: absolute;
-    box-shadow: none;
-    margin:0;
-    padding:15px;
-    top:0;
-    left:0;
-    width: 100%;
-    height: 100%;
-    padding-top: 65px;
-    max-width: none;
-    min-width: auto;
-    display: none;
-    transform: translateX(0%);
-    overflow-y: auto;
-  }
-  .header .menu > ul > li .sub-menu.active{
-    display: block;
-  }
-  @keyframes slideLeft{
-    0%{
-      opacity:0;
-      transform: translateX(100%);
-    }
-    100%{
-      opacity:1;
-      transform: translateX(0%);
-    }
-  }
-  @keyframes slideRight{
-    0%{
-      opacity:1;
-      transform: translateX(0%);
-    }
-    100%{
-      opacity:0;
-      transform: translateX(100%);
-    }
-  }
-  .header .menu > ul > li .sub-menu.mega-menu-column-4 > .list-item img{
-    margin-top:0;
-  }
-  .header .menu > ul > li .sub-menu.mega-menu-column-4 > .list-item.text-center .title{
-    margin-bottom: 20px;
-  }
-  .header .menu > ul > li .sub-menu.mega-menu-column-4 > .list-item.text-center:last-child .title{
-    margin-bottom:0px;
-  }
-  .header .menu > ul > li .sub-menu.mega-menu-column-4 > .list-item{
-    flex: 0 0 100%;
-    padding: 0px;
-  }
-  .header .menu > ul > li .sub-menu > ul > li > a,
-  .header .menu > ul > li .sub-menu.mega-menu > .list-item > ul > li > a{
-    display: block;
-  }
-  .header .menu > ul > li .sub-menu.mega-menu > .list-item > ul {
-    margin-bottom: 15px;
-  }
-  .menu-overlay{
-    position: fixed;
-    background-color: rgba(0,0,0,0.5);
-    left:0;
-    top:0;
-    width: 100%;
-    height: 100%;
-    z-index: 1098;
-    visibility: hidden;
-    opacity:0;
-    transition: all 0.5s ease;
-  }
-  .menu-overlay.active{
-    visibility: visible;
-    opacity:1;
-  }
-}
 .desktop-oddColumnContent {
-  float: left;
   display: block;
-  position: relative;
+  float: left;
   height: 436px;
   padding-top: 4px;
+  position: relative;
 }
+
 .desktop-navBlock {
   display: block;
-  position: relative;
   float: left;
-  width: 216px;
   margin: 0;
   padding: 0;
+  position: relative;
+  width: 216px;
 }
+
 .desktop-navBlock>li {
   padding-left: 25px;
 }
+
 .desktop-categoryName {
   display: block;
   font-size: 14px;
   text-decoration: none;
 }
-.desktop-categoryName {
-  text-transform: uppercase;
-  color: $gray-900;
-  padding: 12px 0 2px;
-  white-space: nowrap;
-  text-overflow: ellipsis;
-  overflow: hidden;
-  font-weight: 700;
-  font-size: 14px;
-  letter-spacing: 1px;
 
+.desktop-categoryName {
+  color: $gray-900;
+  font-size: 14px;
+  font-weight: 700;
+  letter-spacing: 1px;
+  overflow: hidden;
+  padding: 12px 0 2px;
+  text-overflow: ellipsis;
+  text-transform: uppercase;
+  white-space: nowrap;
 }
+
 .desktop-categoryLink {
   color: $gray-800;
   font-weight: 400;
 }
-.desktop-categoryLink, .desktop-categoryName {
+
+.desktop-categoryLink,
+.desktop-categoryName {
   display: block;
   font-size: 14px;
   text-decoration: none;
 }
-.desktop-evenColumnContent {
-  background-color: rgba(245,245,246,.4);
-}
+
 .desktop-hrLine {
-  width: 140px;
+  background-color: $white;
   height: 1px;
   margin: 12px 0 0 25px;
-  background-color: #eaeaec;
+  width: 140px;
 }
+
 a.desktop-categoryLink:hover {
   color: $danger;
 }
+
 li.menu-item-has-children:hover {
   color: $primary;
 }
+
 .mega-menu {
   margin-top: 5px !important;
 }
