--- a/dev/scss/sections/_header.scss
+++ b/dev/scss/sections/_header.scss
@@ -381,3 +381,28 @@ li.menu-item-has-children:hover {
 .mega-menu {
   margin-top: 5px !important;
 }
+
+.mega-list-logo {
+  z-index: 10000;
+}
+
+.img-box {
+  //z-index: 10000;
+}
+
+.image-wrapper {
+  display: block;
+  padding: 10px;
+  position: absolute;
+  right: 0;
+  top: 50%;
+  transform: translate(0, -50%);
+  width: 285px;
+}
+
+.image-wrapper .site-subnav__image {
+  height: 100%;
+  -o-object-fit: cover;
+  object-fit: cover;
+  width: 100%;
+}
