--- a/dev/scss/sections/_header.scss
+++ b/dev/scss/sections/_header.scss
@@ -1,10 +1,10 @@
 // --- header--- //
 .header {
   display: block;
-  padding: 15px;
   position: relative;
   width: 100%;
   z-index: 99;
+  padding-top: 0;
 
   .site-header-wrapper {
     background-color: $gray-800;
@@ -384,10 +384,6 @@ li.menu-item-has-children:hover {
 
 .mega-list-logo {
   z-index: 10000;
-}
-
-.img-box {
-  //z-index: 10000;
 }
 
 .image-wrapper {
