--- a/assets/styles.css
+++ b/assets/styles.css
@@ -392,16 +392,25 @@ li.menu-item-has-children:hover {
 
 .mega-list-logo {
   z-index: 10000;
+  position: relative;
 }
 
 .image-wrapper {
   display: block;
   padding: 10px;
   position: absolute;
-  right: 0;
+  right: 90px;
   top: 50%;
-  transform: translate(0, -50%);
   width: 285px;
+}
+.image-wrapper .text__section {
+  color: #424551;
+  font-size: 14px;
+  font-weight: 700;
+}
+.image-wrapper .text__section .icon-arrow {
+  margin: 0 8px;
+  width: 12px;
 }
 
 .image-wrapper .site-subnav__image {
@@ -409,4 +418,23 @@ li.menu-item-has-children:hover {
   -o-object-fit: cover;
   object-fit: cover;
   width: 100%;
+}
+
+.link-text__section {
+  align-items: center;
+  background-color: transparent;
+  border: 1px solid #17696a;
+  border-radius: 4px;
+  color: #17696a;
+  cursor: pointer;
+  display: flex;
+  flex-direction: row;
+  height: 36px;
+  left: 24px;
+  top: 0;
+}
+
+.link-text__section:hover {
+  color: #f89828;
+  border: 1px solid #f89828;
 }
